Format code with intelij settings (modified to allow empty blocks to be one one line and to remove some blank lines)